# Progression

./: .gitignore  .travis.yml  BuildProcess.txt  CMakeLists.txt  Dependencies.cmake  Doxyfile.in  ProcessToBuildEtc.txt  ProjectFiles.cmake  README.md  build.sh  buildLinux.sh  buildWindows.ps1  main.cpp
include/: Infrastructure.hpp
include/Driller/: DrillerDefinitions.hpp  DrillerResources.hpp  DrillerStart.hpp
include/Driller/Components/: RenderComponent.hpp  TransformationComponent.hpp
include/Driller/Elements/: BaseElement.hpp  ElementHelpers.hpp  ElevatorShaftElement.hpp  JobElement.hpp  RoomElement.hpp  ShuttleElement.hpp  UndergroundTileElement.hpp  WorkerElement.hpp
include/Driller/Elements/Rooms/: Dorm.hpp  Mining.hpp
include/Driller/Managers/: Camera.hpp  EconomyManager.hpp  JobManager.hpp  NotificationService.hpp  ResourceManager.hpp  RoomManager.hpp  ShuttleManager.hpp  TileManager.hpp  UserInteractionManager.hpp  WorkerManager.hpp
include/Driller/Models/: JobContextInfo.hpp
include/Driller/Scenes/: DrillerGameScene.hpp
include/Driller/Systems/: RenderSystem.hpp
include/ECS/: Component.hpp  Entity.hpp  EntityManager.hpp  System.hpp
include/Graphics/: AnimatedSprite.hpp  CircleShape.hpp  Colour.hpp  Font.hpp  Glyph.hpp  Image.hpp  ImageLoader.hpp  RenderData.hpp  Renderable.hpp  Shader.hpp  Text.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp
include/Infrastructure/: Application.hpp  Camera.hpp  FontManager.hpp  InstanceCollection.hpp  Manager.hpp  Scene.hpp  SceneManager.hpp  ShaderManager.hpp  Signal.hpp  TextureManager.hpp
include/Pong/: PongDefinitions.hpp  PongResources.hpp  PongStart.hpp
include/Pong/GameObjects/: Ball.hpp  Board.hpp  GameObject.hpp  Paddle.hpp
include/Pong/Managers/: GameObjectManager.hpp  NotificationManager.hpp
include/Pong/Scenes/: PongGameScene.hpp
include/System/: Clock.hpp  Event.hpp  InputImplementation.hpp  InputImplementationWin32.hpp  Keyboard.hpp  Mat4x4.hpp  Mouse.hpp  Rect.hpp  Rect.inl  Time.hpp  Transformable2D.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl  VectorMath.hpp  VectorMath.inl
include/Tower/: TowerDefinitions.hpp  TowerResources.hpp  TowerStart.hpp
include/Tower/Components/: Tile.hpp
include/Tower/GameObjects/: Creep.hpp  GameObject.hpp  Level.hpp  ProjectileBase.hpp  TowerBase.hpp
include/Tower/GameObjects/Projectiles/: BasicBullet.hpp
include/Tower/GameObjects/Towers/: BasicTower.hpp
include/Tower/Managers/: CreepManager.hpp  EconomyManager.hpp  LevelInteractionManager.hpp  LevelManager.hpp  NotificationManager.hpp  ProjectileManager.hpp  TowerManager.hpp  UserInteractionManager.hpp
include/Tower/Scenes/: TowerGameScene.hpp
include/Utility/: StringHelper.hpp  XML.hpp
include/Window/: ContextImplementation.hpp  ContextWin32.hpp  OpenGL.hpp  OpenGLDefinitions.hpp  OpenGLDefinitionsWindows.hpp  VideoMode.hpp  Window.hpp  WindowImplementation.hpp  WindowImplementationWin32.hpp  WindowStyle.hpp
include/cppbase/: Factorial.hpp  cppbase.hpp
resources/Shaders/: AnimatedSprite.Fragment.glsl  AnimatedSprite.Vertex.glsl  TextShader.Fragment.glsl  TextShader.Vertex.glsl
resources/Shaders/Driller/: BasicPosition.Fragment.glsl  BuildingGhost.Fragment.glsl  BuildingGhost.Vertex.glsl  StaticTextured.Fragment.glsl  StaticTextured.Vertex.glsl
resources/Shaders/Pong/: SolidNoTexture.Fragment.glsl  SolidNoTexture.Vertex.glsl
resources/Shaders/Tower/: VertexArrayNoTexture.Vertex.glsl
scripts/: install_sfml.sh
src/: Factorial.cpp  main.cpp
src/Driller/: DrillerDefinitions.cpp  DrillerResources.cpp  DrillerStart.cpp
src/Driller/Components/: RenderComponent.cpp  TransformationComponent.cpp
src/Driller/Elements/: BaseElement.cpp  ElementHelpers.cpp  ElevatorShaftElement.cpp  JobElement.cpp  RoomElement.cpp  ShuttleElement.cpp  UndergroundTileElement.cpp  WorkerElement.cpp
src/Driller/Managers/: Camera.cpp  EconomyManager.cpp  JobManager.cpp  NotificationService.cpp  ResourceManager.cpp  RoomManager.cpp  ShuttleManager.cpp  TileManager.cpp  UserInteractionManager.cpp  WorkerManager.cpp
src/Driller/Scenes/: DrillerGameScene.cpp
src/Driller/Systems/: RenderSystem.cpp
src/ECS/: Component.cpp  EntityManager.cpp
src/Graphics/: AnimatedSprite.cpp  CircleShape.cpp  Colour.cpp  Font.cpp  Glyph.cpp  Image.cpp  ImageLoader.cpp  RenderData.cpp  Shader.cpp  Text.cpp  Texture.cpp  Vertex.cpp  VertexArray.cpp
src/Infrastructure/: Application.cpp  Camera.cpp  FontManager.cpp  InstanceCollection.cpp  Scene.cpp  SceneManager.cpp  ShaderManager.cpp  TextureManager.cpp
src/Pong/: PongDefinitions.cpp  PongResources.cpp  PongStart.cpp
src/Pong/GameObjects/: Ball.cpp  Board.cpp  GameObject.cpp  Paddle.cpp
src/Pong/Managers/: GameObjectManager.cpp  NotificationManager.cpp
src/Pong/Scenes/: PongGameScene.cpp
src/Progression/: Factorial.cpp
src/System/: Clock.cpp  InputImplementationWin32.cpp  Keyboard.cpp  Mat4x4.cpp  Mouse.cpp  Time.cpp  Transformable2D.cpp
src/Tower/: TowerDefinitions.cpp  TowerResources.cpp  TowerStart.cpp
src/Tower/Components/: Tile.cpp
src/Tower/GameObjects/: Creep.cpp  GameObject.cpp  Level.cpp  ProjectileBase.cpp  TowerBase.cpp
src/Tower/Managers/: CreepManager.cpp  EconomyManager.cpp  LevelInteractionManager.cpp  LevelManager.cpp  NotificationManager.cpp  ProjectileManager.cpp  TowerManager.cpp  UserInteractionManager.cpp
src/Tower/Scenes/: TowerGameScene.cpp
src/Utility/: StringHelper.cpp  XML.cpp
src/Window/: ContextWin32.cpp  OpenGL.cpp  Window.cpp  WindowImplementationWin32.cpp
test/: factorialTest.cpp  testCppbase.cpp  testFactorial.cpp
test/ECS/: ComponentTests.cpp  EntityManagerTests.cpp  EntityTests.cpp  SystemTests.cpp
test/Graphics/: ColourTests.cpp
test/Infrastructure/: ApplicationTests.cpp  InstanceCollectionTests.cpp  SceneManagerTests.cpp  SceneTests.cpp  SignalTests.cpp
test/System/: Mat4x4Tests.cpp  RectTests.cpp  TimeTests.cpp  Transformable2DTests.cpp  Vector2Tests.cpp  Vector3Tests.cpp  Vector4Tests.cpp
test/Utility/: StringHelperTests.cpp  XMLTests.cpp
(+4 files in other folders)
